--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,9 @@
+
+<% provide(:title, 'Home') %>
+
 <h2>Hello World</h2>
 <p>
-  The time is now: <%= Time.now %>
+    The time is now: <%= Time.now %>
 </p>
+
+
