--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,7 @@
-
-<% provide(:title, 'Home') %>
-
-<h2>Hello World</h2>
-<p>
-    The time is now: <%= Time.now %>
-</p>
-
-
+<div class="center hero-unit">
+    <h2>Hello World</h2>
+    <p>
+        The time is now: <%= Time.now %>
+    </p>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
