--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "animate";
 
 $lightGray: #999;
 html {
@@ -22,9 +23,10 @@ html {
     text-align: center;
         h1{
             margin-bottom:10px;
-            
         }
   }
+
+  
 
   #error_explanation {
     color: red;
@@ -40,10 +42,7 @@ html {
       color: $state-danger-text;
     }
   }
-  .center h1 {
-    margin-bottom: 10px;
-    text-align: center;
-  }
+  
 
   #logo {
     float: left;
