--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,11 @@
     <% flash.each do |message_type, message| %>
       <div class="alert alert-<%= message_type %>"><%= message %></div>
     <% end %>
-    
+
     <%=render 'layouts/header'%>
-    <div class="main-body">
+    <div>
       <%= yield %>
-      <%= debug(params) if Rails.env.development? %>
+      
     </div>
   </body>
 </html>
