--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@question) do |f| %>
-
+      <%= render 'shared/question_errors' %>
       <%= f.label :Question %>
       <%= f.text_field :title, class: 'form-control' %>
       
@@ -15,10 +15,10 @@
       <%= f.label :wrong1, "Wrong Answer" %>
       <%= f.text_field :wrong1, class: 'form-control' %>
 
-     <%= f.label :wrong2, "Wrong Answer" %>
+     <%= f.label :wrong2, "Wrong Answer(optional)" %>
       <%= f.text_field :wrong2, class: 'form-control' %>
 
-      <%= f.label :wrong3, "Wrong Answer" %>
+      <%= f.label :wrong3, "Wrong Answer(optional)" %>
       <%= f.text_field :wrong3, class: 'form-control' %>
 
       <%= f.submit "Create Question", class: "btn btn-primary" %>
