--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,22 +1,33 @@
-<div class="center hero-unit">
-    
-    <%if !logged_in?%>
 
-        <h2>Welcome to Trivia!</h2>
-        
-        <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-        
-        <h2>or</h2>
-        
-        <%= link_to "Log in!", login_path, class: "btn btn-large btn-primary" %>
-    <%else%>
-    <div class = "row">
-        <%= link_to "Play Trivia!", 'questions/'+rand(1..Question.all.count).to_s, class: "btn btn-large btn-primary" %>
-    </div>
-    <div class = "row">
-        <%= link_to "Create a Question!", newQuestion_path, class: "btn btn-large btn-primary" %>
-    </div>
+
+<div class="center">
     
-    <%end%>
+    <div class = "col-sm-4 col-sm-offset-4 top-buffer-large">
+        <div class="panel panel-default">
+            <div class = panel-heading><h3>Welcome to Trivia!</h3></div>
+            <div class="panel-body">
+                <%if !logged_in?%>
+
+                    
+                    
+                    <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+                    
+                    <h2>or</h2>
+                    
+                    <%= link_to "Log in!", login_path, class: "btn btn-large btn-primary" %>
+                <%else%>
+
+                <div class = "row bottom-buffer">
+                    <%= link_to "Play Trivia!", 'questions/'+rand(1..Question.all.count).to_s, class: "btn btn-large btn-primary" %>
+                </div>
+                
+                <div class = "row">
+                    <%= link_to "Create a Question!", newQuestion_path, class: "btn btn-large btn-primary" %>
+                </div>
+                
+                <%end%>
+            </div>
+        </div>
+    </div>
     
 </div>
