simple reputation system

--- a/app/views/layouts/_answer.html.erb
+++ b/app/views/layouts/_answer.html.erb
@@ -87,7 +87,7 @@
                     </div>
                     <div class = "row">
                         <button type="submit" name ="answer" value = "incorrect" 
-                                class ="purple background col-md-8 col-md-offset-2 btn btn-primary">
+                                class ="purple-background col-md-8 col-md-offset-2 btn btn-primary">
                         <%=@question.wrong1%>
                         </button>
                     </div>
