--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,6 +25,16 @@ html {
             margin-bottom:10px;
         }
   }
+  .about-text{
+    font-size: 40px;
+    
+  }
+  .welcome-text{
+    font-size: 70px;
+  }
+  .top-buffer{
+    margin-top: 50px;
+  }
   .top-buffer-large{
     margin-top: 100px;
   }
@@ -74,7 +84,10 @@ html {
     -webkit-box-sizing: border-box;
     box-sizing:         border-box;
   }
- 
+  .welcome-button{
+    font-size: 180%;
+    width: 50%;
+  }
   .overlay{
     width: 100%;
     height: 100%;
