--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
               <%= link_to "Home",root_path %></li>
               <% if logged_in? %>
                 <li class = 'nav-item'><%= link_to "Log out", logout_path, method: "delete" %></li>
-                <li class = 'nav-item'><%= link_to "Profile", profile_path  %></li>
+                <li class = 'nav-item'><%= link_to "About", about_path  %></li>
             <% else %>
               <li><%= link_to "Log in", login_path %></li>
             <% end %>
