--- a/app/views/layouts/_nextquestion.html.erb
+++ b/app/views/layouts/_nextquestion.html.erb
@@ -6,11 +6,14 @@
                     </div>
                     <form action=<%=rand(1..Question.all.count).to_s%>>
                         <div class = "row bottom-buffer">
-                            <button type="submit" name ="answer" value = "wascorrect" class ="col-md-10 col-md-offset-1 btn btn-primary">
+                            <button type="submit" name ="answer" value = "wascorrect" 
+                                    class ="red-background col-md-10 col-md-offset-1 btn btn-primary">
                             Next Question
                             </button>
                         </div>
                     </form>
+                    <%= link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wascorrect',
+                    :action => increment_rep(@question.creator), class:"purple-background col-md-10 col-md-offset-1 btn btn-primary" %>
                 </div>
             </div>
         <%end%>
@@ -22,11 +25,14 @@
                     </div>
                     <form action=<%=rand(1..Question.all.count).to_s%>>
                         <div class = "row bottom-buffer">
-                            <button type="submit" name ="answer" value = "wascorrect" class ="col-md-10 col-md-offset-1 btn btn-primary">
+                            <button type="submit" name ="answer" value = "wascorrect" 
+                                    class ="red-background col-md-10 col-md-offset-1 btn btn-primary">
                             Next Question
                             </button>
                         </div>
                     </form>
+                    <%= link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wascorrect',
+                    :action => increment_rep(@question.creator), class:"purple-background col-md-10 col-md-offset-1 btn btn-primary" %>
                 </div>
             </div>
         <%end%>
@@ -38,11 +44,14 @@
                     </div>
                     <form action=<%=rand(1..Question.all.count).to_s%>>
                         <div class = "row bottom-buffer">
-                            <button type="submit" name ="answer" value = "wasincorrect" class ="col-md-10 col-md-offset-1 btn btn-primary">
+                            <button type="submit" name ="answer" value = "wasincorrect" 
+                                    class ="purple-background col-md-10 col-md-offset-1 btn btn-primary">
                             Next Question
                             </button>
                         </div>
                     </form>
+                    <%= link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wasincorrect',
+                    :action => increment_rep(@question.creator), class:" green-background col-md-10 col-md-offset-1 btn btn-primary" %>
                 </div>
             </div>
         <%end%>
@@ -54,11 +63,14 @@
                     </div>  
                     <form action=<%=rand(1..Question.all.count).to_s%>>
                         <div class = "row bottom-buffer">
-                            <button type="submit" name ="answer" value = "wasincorrect" class ="col-md-10 col-md-offset-1 btn btn-primary">
+                            <button type="submit" name ="answer" value = "wasincorrect" 
+                                    class ="purple-background col-md-10 col-md-offset-1 btn btn-primary">
                             Next Question
                             </button>
                         </div>
                     </form>
+                    <%= link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wasincorrect',
+                    :action => increment_rep(@question.creator), class:" green-background col-md-10 col-md-offset-1 btn btn-primary" %>
                 </div>
             </div>
         <%end%>
