--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,27 +1,30 @@
 <% provide(:title, 'Create Question') %>
-
+<div class = "row top-buffer">
 <h1 class = "center">Create Question</h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@question) do |f| %>
-      <%= render 'shared/question_errors' %>
-      <%= f.label :Question %>
-      <%= f.text_field :title, class: 'form-control' %>
-      
-      <%= f.label :correct, "Correct Answer" %>
-      <%= f.text_field :correct, class: 'form-control' %>
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+      <%= form_for(@question) do |f| %>
+        <%= render 'shared/question_errors' %>
 
-      <%= f.label :wrong1, "Wrong Answer" %>
-      <%= f.text_field :wrong1, class: 'form-control' %>
+        <%= f.text_field :creator, class: 'form-control', :value=>current_user.name %>
+        <%= f.label :Question %>
+        <%= f.text_field :title, class: 'form-control' %>
+        
+        <%= f.label :correct, "Correct Answer" %>
+        <%= f.text_field :correct, class: 'form-control' %>
 
-     <%= f.label :wrong2, "Wrong Answer(optional)" %>
-      <%= f.text_field :wrong2, class: 'form-control' %>
+        <%= f.label :wrong1, "Wrong Answer" %>
+        <%= f.text_field :wrong1, class: 'form-control' %>
 
-      <%= f.label :wrong3, "Wrong Answer(optional)" %>
-      <%= f.text_field :wrong3, class: 'form-control' %>
+      <%= f.label :wrong2, "Wrong Answer(optional)" %>
+        <%= f.text_field :wrong2, class: 'form-control' %>
 
-      <%= f.submit "Create Question", class: "btn btn-primary" %>
-    <% end %>
+        <%= f.label :wrong3, "Wrong Answer(optional)" %>
+        <%= f.text_field :wrong3, class: 'form-control' %>
+
+        <%= f.submit "Create Question", class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
 </div>
