--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -8,6 +8,11 @@
             <div class = "row bottom-buffer top-buffer-large">
                 <h1 class ="center "><%= @question.title %></h1>
             </div>
+            <div class = "row bottom-buffer">
+                <div class = center>
+                    <p> written by <%=@question.creator%></p>
+                </div>
+            </div>
             <%=render 'layouts/answer'%>    
         </div>
     
