--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -7,7 +7,7 @@
       <%= form_for(@question) do |f| %>
         <%= render 'shared/question_errors' %>
 
-        <%= f.text_field :creator, class: 'form-control', :value=>current_user.name %>
+        <%= f.text_field :creator, class: 'form-control hidden', :value=>current_user.name %>
         <%= f.label :Question %>
         <%= f.text_field :title, class: 'form-control' %>
         
