--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if @user.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      Fix the following <%= pluralize(@question.errors.count, "error") %>.
+      Fix the following <%= pluralize(@user.errors.count, "error") %>.
     </div>
     <ul>
     <% @user.errors.full_messages.each do |msg| %>
