--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,16 +2,19 @@
       <div class="navbar-inner">
         <div class="container">
           <%= link_to "Trivia!", '#', id: "logo" %>
-          <nav >
+          <nav>
             <ul class="nav navbar-nav navbar-right">
-              <li class = 'nav-item'>
-              <%= link_to "Home",root_path %></li>
+              
+              <li class = 'nav-item'><%= link_to "Home",root_path %></li>
+              
+              <li class = 'nav-item'><%= link_to "About", about_path  %></li>
+              
               <% if logged_in? %>
                 <li class = 'nav-item'><%= link_to "Log out", logout_path, method: "delete" %></li>
-                <li class = 'nav-item'><%= link_to "About", about_path  %></li>
-            <% else %>
-              <li><%= link_to "Log in", login_path %></li>
-            <% end %>
+              <% else %>
+                <li class = 'nav-item'><%= link_to "Log in", login_path %></li>
+              <% end %>
+
             </ul>
           </nav>
         </div>
