--- a/app/views/layouts/_nextquestion.html.erb
+++ b/app/views/layouts/_nextquestion.html.erb
@@ -1,80 +1,108 @@
+<!--fades in and out correct/incorrect answer screen based on url params-->
+
+<!--fade in if answered correctly-->
 <%if params[:answer]=="correct"%>
-            <div class = "fade-green overlay animated fadeInUp delay-3s">
-                <div class = "top-buffer-xlarge col-md-4 col-md-offset-4  ">
-                    <div class="row bottom-buffer">
-                        <h1 class ="center">You got it!</h1>
-                    </div>
-                    <form action=<%=rand(1..Question.all.count).to_s%>>
-                        <div class = "row bottom-buffer">
-                            <button type="submit" name ="answer" value = "wascorrect" 
-                                    class ="red-background col-md-10 col-md-offset-1 btn btn-primary">
-                            Next Question
-                            </button>
-                        </div>
-                    </form>
-                    <%if current_user.name != @question.creator%>
-                        <%=link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wascorrect',:action => increment_rep(@question.creator), class:"purple-background col-md-10 col-md-offset-1 btn btn-primary" %>
-                    <%end%>
-                </div>
+    <div class = "fade-green overlay animated fadeInUp delay-3s">
+        <div class = "top-buffer-xlarge col-md-4 col-md-offset-4  ">
+            <div class="row bottom-buffer">
+                <h1 class ="center">You got it!</h1>
             </div>
-        <%end%>
-        <%if params[:answer]=="wascorrect"%>
-            <div class = "fade-green overlay animated fadeOutUp delay-3s">
-                <div class = "top-buffer-xlarge col-md-4 col-md-offset-4 ">
-                    <div class="row bottom-buffer">
-                        <h1 class ="center ">You got it!</h1>
-                    </div>
-                    <form action=<%=rand(1..Question.all.count).to_s%>>
-                        <div class = "row bottom-buffer">
-                            <button type="submit" name ="answer" value = "wascorrect" 
-                                    class ="red-background col-md-10 col-md-offset-1 btn btn-primary">
-                            Next Question
-                            </button>
-                        </div>
-                    </form>
-                    <%if current_user.name != @question.creator%>
-                        <%= link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wascorrect', class:"purple-background col-md-10 col-md-offset-1 btn btn-primary" %>
-                    <%end%>
-                </div>
+            
+            <!--next question button-->
+            <div class="row bottom-buffer">
+            <!--this is probably not the best way to set params but I'm not sure how to do it properly with link_to-->
+                <%=link_to 'Next Question', rand(1..Question.all.count).to_s+'?answer=wascorrect&prev='+question_creator, 
+                class:"purple-background col-md-10 col-md-offset-1 btn btn-primary"%>
             </div>
-        <%end%>
-        <%if params[:answer]=="incorrect"%>
-            <div class = "overlay fade-red animated fadeInUp delay-3s">
-                <div class = "top-buffer-large col-md-4 col-md-offset-4 ">
-                    <div class="row bottom-buffer">
-                        <h1 class ="center ">:( that wasn't right</h1>
-                    </div>
-                    <form action=<%=rand(1..Question.all.count).to_s%>>
-                        <div class = "row bottom-buffer">
-                            <button type="submit" name ="answer" value = "wasincorrect" 
-                                    class ="purple-background col-md-10 col-md-offset-1 btn btn-primary">
-                            Next Question
-                            </button>
-                        </div>
-                    </form>
-                    <%if current_user.name != @question.creator%>
-                        <%= link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wasincorrect',:action => increment_rep(@question.creator), class:" green-background col-md-10 col-md-offset-1 btn btn-primary" %>
-                    <%end%>
-                </div>
+            
+            <!--upvote button which also goes to next question-->
+            <div class="row bottom-buffer">
+                <!--cannot upvote your own question-->
+                <%if current_user.name != @question.creator%>
+                    <%=link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wascorrect&prev='+question_creator,
+                    action: increment_rep(@question.creator), 
+                    class:"purple-background col-md-10 col-md-offset-1 btn btn-primary"%>
+                <%end%>
             </div>
-        <%end%>
-        <%if params[:answer]=="wasincorrect"%>
-            <div class = "overlay fade-red animated fadeOutUp delay-3s">
-                <div class = "top-buffer-large col-md-4 col-md-offset-4  ">
-                    <div class="row bottom-buffer">
-                        <h1 class ="center ">:( that wasn't right</h1>
-                    </div>  
-                    <form action=<%=rand(1..Question.all.count).to_s%>>
-                        <div class = "row bottom-buffer">
-                            <button type="submit" name ="answer" value = "wasincorrect" 
-                                    class ="purple-background col-md-10 col-md-offset-1 btn btn-primary">
-                            Next Question
-                            </button>
-                        </div>
-                    </form>
-                    <%if current_user.name == @question.creator%>
-                        <%= link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wasincorrect', class:" green-background col-md-10 col-md-offset-1 btn btn-primary" %>
-                    <%end%>
-                </div>
+
+        </div>
+    </div>
+<%end%>
+
+<!--below are duplicates of above code for different scenarios-->
+
+<!--fade out if answered correctly and moving to new question-->
+<%if params[:answer]=="wascorrect"%>
+    <div class = "fade-green overlay animated fadeOutUp delay-3s">
+        <div class = "top-buffer-xlarge col-md-4 col-md-offset-4 ">
+            
+            <div class="row bottom-buffer">
+                <h1 class ="center ">You got it!</h1>
             </div>
-        <%end%>
+            
+            <div class="row bottom-buffer">
+                <%=link_to 'Next Question', rand(1..Question.all.count).to_s+'?answer=wascorrect', 
+                class:"purple-background col-md-10 col-md-offset-1 btn btn-primary bottom-buffer" %>
+            </div>
+            
+            <div class="row bottom-buffer">
+                <!--since fade out is done in new question page
+                don't show upvote while fading out if user wrote previous question-->
+                <%if current_user.name != params[:prev]%>
+                    <%= link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wascorrect', 
+                    class:"purple-background col-md-10 col-md-offset-1 btn btn-primary"%>
+                <%end%>
+            </div>
+
+        </div>
+    </div>
+<%end%>
+<!--fade in if answered incorrectly-->
+<%if params[:answer]=="incorrect"%>
+    <div class = "overlay fade-red animated fadeInUp delay-3s">
+        <div class = "top-buffer-xlarge col-md-4 col-md-offset-4 ">
+            
+            <div class="row bottom-buffer">
+                <h1 class ="center ">:( that wasn't right</h1>
+            </div>
+            
+            <div class="row bottom-buffer">
+                <%=link_to 'Next Question', rand(1..Question.all.count).to_s+'?answer=wasincorrect&prev='+question_creator, 
+                class:"purple-background col-md-10 col-md-offset-1 btn btn-primary bottom-buffer" %>
+            </div>
+            
+            <div class="row bottom-buffer">
+                <%if current_user.name != @question.creator%>
+                    <%=link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wasincorrect&prev='+question_creator,
+                    action: increment_rep(@question.creator), 
+                    class:"purple-background col-md-10 col-md-offset-1 btn btn-primary"%>
+                <%end%>
+            </div>
+
+        </div>
+    </div>
+<%end%>
+<!--fade out if answered incorrectly and moving to new question-->
+<%if params[:answer]=="wasincorrect"%>
+    <div class = "overlay fade-red animated fadeOutUp delay-3s">
+        <div class = "top-buffer-xlarge col-md-4 col-md-offset-4  ">
+            
+            <div class="row bottom-buffer">
+                <h1 class ="center ">:( that wasn't right</h1>
+            </div> 
+
+            <div class="row bottom-buffer">
+                <%=link_to 'Next Question', rand(1..Question.all.count).to_s+'?answer=wasincorrect', 
+                class:"purple-background col-md-10 col-md-offset-1 btn btn-primary bottom-buffer"%>
+            </div>
+
+            <div class="row bottom-buffer">
+                <%if current_user.name != params[:prev]%>
+                    <%= link_to 'Upvote Question', rand(1..Question.all.count).to_s+'?answer=wasincorrect', 
+                    class:"purple-background col-md-10 col-md-offset-1 btn btn-primary"%>
+                <%end%>
+            </div>
+
+        </div>
+    </div>
+<%end%>
