--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -7,7 +7,9 @@
       <%= form_for(@question) do |f| %>
         <%= render 'shared/question_errors' %>
 
+        <!--hidden field lets us save the current user as question creator-->
         <%= f.text_field :creator, class: 'form-control hidden', :value=>current_user.name %>
+        
         <%= f.label :Question %>
         <%= f.text_field :title, class: 'form-control' %>
         
