--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,21 +1,30 @@
+<!--page for an individual question-->
 <div class = "row">
-    
+    <!--fades question in or out based on if it was answered-->
     <%if params[:answer]=="correct" ||params[:answer]=="incorrect" %>
         <div class = "col-md-6 col-md-offset-3 animated fadeOutUp delay-2s">
     <%else%>
         <div class = "col-md-6 col-md-offset-3 animated fadeInUp delay-2s">
     <%end%>
+
             <div class = "row bottom-buffer top-buffer-large">
                 <h1 class ="center "><%= @question.title %></h1>
             </div>
+
             <div class = "row bottom-buffer">
                 <div class = center>
                     <p> written by <%=@question.creator%></p>
                 </div>
             </div>
-            <%=render 'layouts/answer'%>    
+
+            <!--layout for randomizing answer order and displaying-->
+            <div class = 'center'>
+                <%=render 'layouts/answer'%>   
+            </div>           
         </div>
-    
-    <%=render 'layouts/nextquestion'%> 
-    
+    <!--layout for correct/incorrect screen-->
+    <!--fade in/out decided inside layout-->
+    <div class = 'center'>
+        <%=render 'layouts/nextquestion'%> 
+    </div>
 </div>
