--- a/app/views/shared/_question_errors.html.erb
+++ b/app/views/shared/_question_errors.html.erb
@@ -1,3 +1,4 @@
+<!--called in questions/new-->
 <div class = "row">
     <% flash.each do |message_type, message| %>
       <div class="alert alert-<%= message_type %>"><%= message %></div>
