--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,15 +5,15 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/signup_errors' %>
 
-      <%= f.label :name %>
+      <%= f.label :name,"Username(seen publicly)"  %>
       <%= f.text_field :name, class: 'form-control' %>
       
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
 
-     <%= f.label :password_confirmation, "Confirmation" %>
+     <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
