simple top users page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,6 +35,17 @@ html {
     font-size: 180%;
     width: 50%;
   }
+  .ranking-title{
+    font-size:40px;
+    font-weight:bold;
+  }
+  .top-user{
+    font-size:20px;
+  }
+  .top-user-bold{
+    font-size:20px;
+    font-weight: bold;
+  }
   .top-buffer{
     margin-top: 50px;
   }
