--- a/app/views/layouts/_answer.html.erb
+++ b/app/views/layouts/_answer.html.erb
@@ -1,5 +1,5 @@
 <!--randomizes order of questions-->
-
+<!--unfortunately it also randomizes on fade out-->
 <%case rand(1..4)%>
     <%when 1%>
         <form>
