--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,8 @@
             <ul class="nav navbar-nav navbar-right">
               
               <li class = 'nav-item'><%= link_to "Home",root_path %></li>
+
+              <li class = 'nav-item'><%= link_to "Rankings",ranking_path %></li>
               
               <li class = 'nav-item'><%= link_to "About", about_path  %></li>
               
