--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,8 @@
 
 <!--simple home page-->
-<div class="center">
+<div class="container">
     
-    <div class = "col-sm-8 col-sm-offset-2 top-buffer-large">
+    <div class = "center col-sm-8 col-sm-offset-2 top-buffer-large">
            
         <%if !logged_in?%>
 
