--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,7 +24,7 @@
                 <div class="panel-body">
 
                     <div class = "row bottom-buffer">
-                        <%= link_to "Play Trivia!", 'questions/'+rand(1..Question.all.count).to_s, class: "purple-background welcome-button btn btn-large btn-primary" %>
+                        <%= link_to "Play Trivia!", 'questions/'+rand_id.to_s, class: "purple-background welcome-button btn btn-large btn-primary" %>
                     </div>
                     
                     <div class = "row">
