--- a/app/views/questions/all.html.erb
+++ b/app/views/questions/all.html.erb
@@ -18,7 +18,7 @@
     <% @questions.each do |question| %>
         <div class = 'row'>
           <div class = 'top-user bottom-buffer col-md-2 col-md-offset-4'>
-            <%=question.id%>
+            <%=question.title%>
           </div>
           
           <div class = 'top-user bottom-buffer col-md-2'>
